--- a/stylesheets/login.css
+++ b/stylesheets/login.css
@@ -8,11 +8,13 @@
 	background: radial-gradient(ellipse at center, rgba(0,159,218,1) 0%,rgba(0,155,207,1) 99%);
 }
 
-#login > input {
+#login > article > .form {
 	position: absolute;
 	top: 0;
 	bottom: 0;
 	left: 0;
 	right: 0;
 	margin: auto;
+	width: 200px;
+	height: 200px;
 }
