--- a/stylesheets/structure.css
+++ b/stylesheets/structure.css
@@ -20,7 +20,13 @@ body {
 }
 
 #container.menu {
-	margin-left: 0;
+	margin-left: -90px;
+}
+
+#container > aside > article {
+	position: relative;
+	width: 100%;
+	height: 100%;
 }
 
 #application {
