--- a/stylesheets/structure.css
+++ b/stylesheets/structure.css
@@ -11,16 +11,11 @@ body {
 
 #container {
 	position: relative;
-	width: 200%;
+	width: 100%;
 	height: 100%;
-	margin-left: -100%;
 	overflow: hidden;
 	transition: margin-left .5s,width .5s;
 	-webkit-transition: margin-left .5s,width .5s;
-}
-
-#container.menu {
-	margin-left: -90px;
 }
 
 #container > aside > article {
@@ -34,15 +29,15 @@ body {
 	top: 0;
 	bottom: 0;
 	right: 0;
-	left: 50%;
-	width: 50%;
+	left: 0;
+	width: 100%;
 	height: 100%;
 	background-color: #f4f4f4;
 }
 
 #application > section  {
 	position: absolute;
-	top: 90px;
+	top: 0;
 	bottom: 0;
 	left: 0;
 	right: 0;
