--- a/stylesheets/structure.css
+++ b/stylesheets/structure.css
@@ -46,6 +46,10 @@ body {
 #application[page=home] > #home,
 #application[page=rewardCategory] > #rewardCategory,
 #application[page=rewardList] > #rewardList,
-#application[page=reward] > #reward {
+#application[page=reward] > #reward,
+#application[page=sponsorCategory] > #sponsorCategory,
+#application[page=sponsorAll] > #sponsorAll,
+#application[page=sponsor] > #sponsor,
+#application[page=sponsorCategoryList] > #sponsorCategoryList {
 	display: block;
 }
