--- a/stylesheets/sponsors.css
+++ b/stylesheets/sponsors.css
@@ -1,44 +1,35 @@
 .sponsorHeader {
-text-align: center;
-}
-
-.sponsorTable {
-margin-left: 20%;
-margin-bottom: 30px;
-width: 60%;
-}
-
-.sponsorTr {
-border: 1px solid black;
-text-align: center;
-}
-
-.SponsorAll {
-border: 1px solid black;
-width: 33%;
-}
-
-.sponsorCate {
-border: 1px solid black;
-width: 34%;
-}
-
-#selectColor{
-background-color: #00FFFF;
+	text-align: center;
 }
 
 .sponsorImage {
-height: 40px;
-width: 100px;
-padding-right: 30px;
+	height: 40px;
+	width: 100px;
+	padding-right: 30px;
 }
 
-.sponsorStyle  h1{
-padding-left: 20px;
-margin-bottom: 30px;
+.sponsorStyle  h1 {
+	text-align: center;
+	margin-bottom: 30px;
 }
 
-.sponsorStyle p {
-padding-left: 20px;
-color: #2E64FE;
+.sponsorStyle  h5 {
+	padding-left: 20px;
+	color: #0099FF;
+	margin-bottom: 30px;
+}
+
+#sponsorNavigation {
+	width: 60%;
+	margin-left: 30%;
+}
+
+#sponsorNavigation  li {
+	width: 20%;
+	text-align: center;
+}
+
+.sponsorStyle  h2 {
+	padding-left: 20px;
+	background-color: #0099FF;
 }
